--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,6 +11,7 @@ cfb = "0.7.3"
 clap = "4.2.7"
 colored = "2.0.0"
 ferris-says = "0.3.1"
+lzw = "0.10.0"
 nom = "7.1.3"
 serde_json = "1.0.96"
 shellexpand = "3.1.0"
