feat: use git-version

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,7 +10,7 @@ rust-version = "1.69"
 cfb = "0.7.3"
 clap = "4.2.7"
 colored = "2.0.0"
-ferris-says = "0.3.1"
+git-version = "0.3.5"
 lzw = "0.10.0"
 nom = "7.1.3"
 serde_json = "1.0.96"
