--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -48,6 +48,8 @@ jobs:
     steps:
         - name: Checkout
           uses: actions/checkout@v3
+          with:
+            fetch-depth: 0
         - name: Install toolchain
           uses: dtolnay/rust-toolchain@stable
           with:
