--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,7 @@ rust-version = "1.69"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+bytes = "1.4.0"
 cfb = "0.7.3"
 clap = "4.3.0"
 colored = "2.0.0"
