--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,6 +14,8 @@ colored = "2.0.0"
 git-version = "0.3.5"
 lzw = "0.10.0"
 nom = "7.1.3"
+quick-xml = { version = "0.28.2", features = ["serialize"] }
+serde = { version = "1.0.163", features = ["derive"] }
 serde_json = "1.0.96"
 shellexpand = "3.1.0"
 utf16string = "0.2.0"
