--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,7 @@ rust-version = "1.69"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+base64 = "0.21.2"
 bytes = "1.4.0"
 cfb = "0.8.0"
 clap = "4.3.0"
