--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,7 @@ rust-version = "1.69"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+base64 = "0.21.2"
 bytes = "1.4.0"
 cfb = "0.8.0"
 clap = "4.3.0"
@@ -14,6 +15,8 @@ colored = "2.0.0"
 git-version = "0.3.5"
 lzw = "0.10.0"
 nom = "7.1.3"
+quick-xml = { version = "0.28.2", features = ["serialize"] }
+serde = { version = "1.0.163", features = ["derive"] }
 serde_json = "1.0.96"
 shellexpand = "3.1.0"
 utf16string = "0.2.0"
