--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,5 +20,6 @@ serde = { version = "1.0.163", features = ["derive"] }
 serde_json = "1.0.96"
 shellexpand = "3.1.0"
 utf16string = "0.2.0"
+walkdir = "2.3.3"
 wild = "2.1.0"
 
