--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,11 +13,12 @@ cfb = "0.8.0"
 clap = "4.3.2"
 colored = "2.0.0"
 git-version = "0.3.5"
+indicatif = "0.17.5"
 lzw = "0.10.0"
 nom = "7.1.3"
 quick-xml = { version = "0.28.2", features = ["serialize"] }
 serde = { version = "1.0.163", features = ["derive"] }
-serde_json = "1.0.96"
+serde_json = { version = "1.0.96", features = ["preserve_order"] }
 shellexpand = "3.1.0"
 utf16string = "0.2.0"
 walkdir = "2.3.3"
