--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,6 +12,7 @@ bytes = "1.4.0"
 cfb = "0.8.0"
 clap = "4.3.2"
 colored = "2.0.0"
+dialoguer = "0.10.4"
 git-version = "0.3.5"
 indicatif = "0.17.5"
 lzw = "0.10.0"
