--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,6 +18,7 @@ git-version = "0.3.5"
 indicatif = "0.17.5"
 lzw = "0.10.0"
 nom = "7.1.3"
+open = "4.1.0"
 quick-xml = { version = "0.29.0", features = ["serialize"] }
 serde = { version = "1.0.164", features = ["derive"] }
 serde_json = { version = "1.0.96", features = ["preserve_order"] }
