--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,15 +14,21 @@ clap = "4.3.3"
 colored = "2.0.0"
 console = "0.15.7"
 dialoguer = "0.10.4"
+futures = "0.3.28"
 git-version = "0.3.5"
 indicatif = "0.17.5"
 lzw = "0.10.0"
 nom = "7.1.3"
+octocrab = "0.25.1"
 open = "4.1.0"
 quick-xml = { version = "0.29.0", features = ["serialize"] }
+regex = "1.8.4"
+reqwest = { version = "0.11.18", features = ["json"] }
+scraper = "0.16.0"
 serde = { version = "1.0.164", features = ["derive"] }
 serde_json = { version = "1.0.96", features = ["preserve_order"] }
 shellexpand = "3.1.0"
+tokio = { version = "1.28.2", features = ["full"] }
 utf16string = "0.2.0"
 walkdir = "2.3.3"
 wild = "2.1.0"
