--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,10 +10,11 @@ rust-version = "1.69"
 base64 = "0.21.2"
 bytes = "1.4.0"
 cfb = "0.8.1"
-clap = "4.3.9"
+clap = { version = "4.3.9", features = ["derive", "string"] }
 colored = "2.0.0"
 console = "0.15.7"
 dialoguer = "0.10.4"
+dirs = "5.0.1"
 git-version = "0.3.5"
 indicatif = "0.17.5"
 lzw = "0.10.0"
