--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,8 +8,10 @@ rust-version = "1.69"
 
 [dependencies]
 base64 = "0.21.2"
+byteorder = "1.4.3"
 bytes = "1.4.0"
 cfb = "0.8.1"
+chrono = "0.4.26"
 clap = { version = "4.3.10", features = ["derive", "string"] }
 colored = "2.0.0"
 console = "0.15.7"
