--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,11 +15,13 @@ chrono = "0.4.26"
 clap = { version = "4.3.11", features = ["derive", "string"] }
 colored = "2.0.4"
 console = "0.15.7"
-dialoguer = "0.10.4"
+# dialoguer = "0.10.4"
+dialoguer = {path = "../dialoguer"}
 dirs = "5.0.1"
 git-version = "0.3.5"
 indicatif = "0.17.5"
 lzw = "0.10.0"
+md2 = "0.10.2"
 nom = "7.1.3"
 open = "5.0.0"
 quick-xml = { version = "0.29.0", features = ["serialize"] }
