--- a/Cargo.toml
+++ b/Cargo.toml
@@ -21,10 +21,13 @@ dirs = "5.0.1"
 encoding_rs = "0.8.32"
 git-version = "0.3.5"
 indicatif = "0.17.6"
+log = "0.4.20"
+logging_timer = "1.1.0"
 lzw = "0.10.0"
 md2 = "0.10.2"
 nom = "7.1.3"
 open = "5.0.0"
+pretty_env_logger = "0.5.0"
 quick-xml = { version = "0.30.0", features = ["serialize"] }
 serde = { version = "1.0.183", features = ["derive"] }
 serde_json = { version = "1.0.105", features = ["preserve_order"] }
@@ -37,3 +40,8 @@ wild = "2.1.0"
 pretty_assertions = "1.4.0"
 rand = "0.8.5"
 testdir = "0.8.0"
+
+[profile.test]
+# level 0 is very slow for writing to compound files
+# see https://github.com/mdsteele/rust-cfb/issues/42
+opt-level = 1
