Added config and the previous code for executable "detection".

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -36,6 +36,7 @@ shellexpand = "3.1.0"
 utf16string = "0.2.0"
 walkdir = "2.4.0"
 wild = "2.1.0"
+figment = { version = "0.10", features = ["toml", "env"] }
 
 [dev-dependencies]
 pretty_assertions = "1.4.0"
