--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -32,6 +32,8 @@ jobs:
           target/
         key: ${{ runner.os }}-cargo-${{ hashFiles('**/Cargo.lock') }}
     - name: Build
+      run: cargo fmt --all --check -- --color=always
+    - name: Build
       run: cargo build --verbose
     - name: Run tests
       run: cargo test --verbose
