--- a/Cargo.toml
+++ b/Cargo.toml
@@ -35,12 +35,16 @@ shellexpand = "3.1.0"
 walkdir = "2.5.0"
 wild = "2.2.1"
 figment = { version = "0.10", features = ["toml", "env"] }
+
 toml = "0.8.19"
 is_executable = "1.0.3"
 regex = { version = "1.10.6", features = [] }
 vpin = { version = "0.15.6" }
 rust-ini = "0.21.1"
 edit = "0.1.5"
+ratatui = "0.23.0"
+#crossterm = "0.27.0"
+anyhow = "1.0.75"
 
 [dev-dependencies]
 pretty_assertions = "1.4.0"
