--- a/Cargo.toml
+++ b/Cargo.toml
@@ -48,6 +48,7 @@ figment = { version = "0.10", features = ["toml", "env"] }
 toml = "0.8.1"
 is_executable = "1.0.1"
 regex = { version = "1.9.6", features = [] }
+vpin = { version = "0.1.0" }
 
 [dev-dependencies]
 pretty_assertions = "1.4.0"
