--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,9 +16,6 @@ name = "vpxtool"
 
 [dependencies]
 base64 = "0.21.4"
-byteorder = "1.4.3"
-bytes = "1.5.0"
-cfb = "0.8.1"
 #see https://github.com/chronotope/chrono/issues/602#issuecomment-1242149249
 chrono = { version = "0.4.31", default-features = false, features = ["clock"] }
 clap = { version = "4.4.6", features = ["derive", "string"] }
@@ -27,27 +24,23 @@ console = "0.15.7"
 dialoguer = "0.11.0"
 # dialoguer = { path = "../dialoguer" }
 dirs = "5.0.1"
-encoding_rs = "0.8.33"
 git-version = "0.3.5"
 indicatif = "0.17.7"
 log = "0.4.20"
 logging_timer = "1.1.0"
-lzw = "0.10.0"
-md2 = "0.10.2"
-nom = "7.1.3"
 open = "5.0.0"
 pretty_env_logger = "0.5.0"
 quick-xml = { version = "0.30.0", features = ["serialize"] }
 serde = { version = "1.0.188", features = ["derive"] }
 serde_json = { version = "1.0.107", features = ["preserve_order"] }
 shellexpand = "3.1.0"
-utf16string = "0.2.0"
 walkdir = "2.4.0"
 wild = "2.2.0"
 figment = { version = "0.10", features = ["toml", "env"] }
 toml = "0.8.1"
 is_executable = "1.0.1"
 regex = { version = "1.9.6", features = [] }
+vpin = { version = "0.1.0" }
 
 [dev-dependencies]
 pretty_assertions = "1.4.0"
