--- a/Cargo.toml
+++ b/Cargo.toml
@@ -22,7 +22,6 @@ clap = { version = "4.4.6", features = ["derive", "string"] }
 colored = "2.0.4"
 console = "0.15.7"
 dialoguer = "0.11.0"
-# dialoguer = { path = "../dialoguer" }
 dirs = "5.0.1"
 git-version = "0.3.5"
 indicatif = "0.17.7"
@@ -40,7 +39,7 @@ figment = { version = "0.10", features = ["toml", "env"] }
 toml = "0.8.2"
 is_executable = "1.0.1"
 regex = { version = "1.9.6", features = [] }
-vpin = { version = "0.1.0" }
+vpin = { version = "0.2.0", path = "../vpin" }
 
 [dev-dependencies]
 pretty_assertions = "1.4.0"
