--- a/Cargo.toml
+++ b/Cargo.toml
@@ -39,7 +39,7 @@ figment = { version = "0.10", features = ["toml", "env"] }
 toml = "0.8.2"
 is_executable = "1.0.1"
 regex = { version = "1.9.6", features = [] }
-vpin = { version = "0.2.0", path = "../vpin" }
+vpin = { version = "0.2.0" }
 
 [dev-dependencies]
 pretty_assertions = "1.4.0"
