--- a/Cargo.toml
+++ b/Cargo.toml
@@ -40,6 +40,7 @@ toml = "0.8.8"
 is_executable = "1.0.1"
 regex = { version = "1.10.2", features = [] }
 vpin = { version = "0.7.0" }
+rust-ini = "0.20.0"
 
 [dev-dependencies]
 pretty_assertions = "1.4.0"
