--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -85,15 +85,15 @@ jobs:
             tar czvf ../../../${{ matrix.platform.name }} ${{ matrix.platform.bin }}
           fi
           cd -
-#        - name: Publish release artifacts
-#          uses: actions/upload-artifact@v4
-#          with:
-#            name: vpxtool-${{ matrix.platform.os_name }}
-#            path: "vpxtool*"
-#          if: github.ref == 'refs/tags/test-release'
-#        - name: Publish GitHub release
-#          uses: softprops/action-gh-release@v1
-#          with:
-#            draft: true
-#            files: "vpxtool*"
-#          if: startsWith( github.ref, 'refs/tags/v' )
+      - name: Publish release artifacts
+        uses: actions/upload-artifact@v4
+        with:
+          name: vpxtool-${{ matrix.platform.os_name }}
+          path: "vpxtool*"
+        if: github.ref == 'refs/tags/test-release'
+      - name: Publish GitHub release
+        uses: softprops/action-gh-release@v1
+        with:
+          draft: true
+          files: "vpxtool*"
+        if: startsWith( github.ref, 'refs/tags/v' )
