no idea if this is better

--- a/.cargo/config.toml
+++ b/.cargo/config.toml
@@ -1,5 +1,4 @@
 # https://github.com/rust-lang/rust/issues/28924
 # Make sure the correct linker is used for cross-compiling
 [target.aarch64-unknown-linux-musl]
-linker = "aarch64-linux-gnu-gcc"
-rustflags = ["-C", "target-feature=+crt-static", "-C", "link-arg=-lgcc"]
+linker = "rust-lld"
