--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -13,42 +13,42 @@ jobs:
             os: ubuntu-20.04
             target: x86_64-unknown-linux-musl
             bin: vpxtool
-            name: vpxtool-Linux-x86_64-musl.tar.gz
+            name: vpxtool-Linux-x86_64-musl
             cargo_command: cargo
 
           - os_name: Linux-aarch64
             os: ubuntu-20.04
             target: aarch64-unknown-linux-musl
             bin: vpxtool
-            name: vpxtool-Linux-aarch64-musl.tar.gz
+            name: vpxtool-Linux-aarch64-musl
             cargo_command: cargo
 
           - os_name: Windows-aarch64
             os: windows-latest
             target: aarch64-pc-windows-msvc
             bin: vpxtool.exe
-            name: vpxtool-Windows-aarch64.zip
+            name: vpxtool-Windows-aarch64
             cargo_command: cargo
 
           - os_name: Windows-x86_64
             os: windows-latest
             target: x86_64-pc-windows-msvc
             bin: vpxtool.exe
-            name: vpxtool-Windows-x86_64.zip
+            name: vpxtool-Windows-x86_64
             cargo_command: cargo
 
           - os_name: macOS-x86_64
             os: macOS-latest
             target: x86_64-apple-darwin
             bin: vpxtool
-            name: vpxtool-macOS-x86_64.tar.gz
+            name: vpxtool-macOS-x86_64
             cargo_command: cargo
 
           - os_name: macOS-aarch64
             os: macOS-latest
             target: aarch64-apple-darwin
             bin: vpxtool
-            name: vpxtool-macOS-aarch64.tar.gz
+            name: vpxtool-macOS-aarch64
             cargo_command: cargo
 
     runs-on: ${{ matrix.platform.os }}
@@ -72,21 +72,29 @@ jobs:
         run: |
           & ${{ matrix.platform.cargo_command }} build --locked --release --target ${{ matrix.platform.target }}
         if: contains(matrix.platform.os, 'windows')
+      - name: Set full archive name as env variable
+        run: |
+          VERSION=$(echo ${GITHUB_REF#refs/tags/} | sed 's/\//-/g')
+          EXTENSION="tar.gz"
+          if [[ "${{ matrix.platform.os }}" == "windows-latest" ]]; then
+            EXTENSION="zip"
+          fi
+          echo "ARCHIVE_NAME=${{ matrix.platform.name }}-${VERSION}.$EXTENSION" >> $GITHUB_ENV
       - name: Package as archive
         shell: bash
         run: |
           cd target/${{ matrix.platform.target }}/release
           if [[ "${{ matrix.platform.os }}" == "windows-latest" ]]; then
-            7z a ../../../${{ matrix.platform.name }} ${{ matrix.platform.bin }}
+            7z a ../../../$ARCHIVE_NAME ${{ matrix.platform.bin }}
           else
-            tar czvf ../../../${{ matrix.platform.name }} ${{ matrix.platform.bin }}
+            tar czvf ../../../$ARCHIVE_NAME ${{ matrix.platform.bin }}
           fi
           cd -
       - name: Publish release artifacts
         uses: actions/upload-artifact@v4
         with:
-          name: vpxtool-${{ matrix.platform.os_name }}
-          path: "vpxtool*"
+          name: $ARCHIVE_NAME
+          path: $ARCHIVE_NAME
         if: github.ref == 'refs/tags/test-release'
       - name: Publish GitHub release
         uses: softprops/action-gh-release@v1
