--- a/.github/workflows/clippy.yml
+++ b/.github/workflows/clippy.yml
@@ -10,5 +10,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
-      - name: Run Clippy
+      - name: Run clippy
         run: cargo clippy --all-targets --all-features
+      - name: Run fmt check
+        run: cargo fmt --all --check -- --color=always
