--- a/.github/workflows/clippy.yml
+++ b/.github/workflows/clippy.yml
@@ -11,6 +11,6 @@ jobs:
     steps:
       - uses: actions/checkout@v4
       - name: Run clippy
-        run: cargo clippy --all-targets --all-features
+        run: cargo clippy --color always --all-targets --all-features
       - name: Run fmt check
         run: cargo fmt --all --check -- --color=always
