--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -16,7 +16,7 @@ jobs:
         platform:
           - os: ubuntu-latest
           - os: windows-latest
-          - os: macOS-latest
+          - os: macOS-14
 
     runs-on: ${{ matrix.platform.os }}
 
