--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -38,14 +38,14 @@ jobs:
             cargo_command: cargo
 
           - os_name: macOS-x86_64
-            os: macOS-13
+            os: macos-latest
             target: x86_64-apple-darwin
             bin: vpxtool
             name: vpxtool-macOS-x86_64
             cargo_command: cargo
 
           - os_name: macOS-aarch64
-            os: macOS-13
+            os: macos-latest
             target: aarch64-apple-darwin
             bin: vpxtool
             name: vpxtool-macOS-aarch64
