--- a/.github/workflows/clippy.yml
+++ b/.github/workflows/clippy.yml
@@ -23,3 +23,6 @@ jobs:
         run: cargo clippy --color always --all-targets --all-features
       - name: Run fmt check
         run: cargo fmt --all --check -- --color=always
+      - name: Run audit
+        run: cargo install cargo-audit && cargo audit
+        # to update the dependencies in the lock file, run `cargo update`
