--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -4,48 +4,43 @@
     // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
     "version": "0.2.0",
     "configurations": [
-
         {
             "type": "lldb",
             "request": "launch",
-            "name": "Launch",
-            "program": "${workspaceFolder}/target/debug/vpxtool",
-            "args": [],
-            "cwd": "${workspaceFolder}"
-        },
-        {
-            "type": "lldb",
-            "request": "launch",
-            "name": "Cargo launch",
+            "name": "Debug executable 'example'",
             "cargo": {
                 "args": [
                     "build",
-                    "--lib"
-                ]
+                    "--bin=vxtool",
+                    "--package=vxtool"
+                ],
+                "filter": {
+                    "name": "vxtool",
+                    "kind": "bin"
+                }
             },
-            "args": []
-        },
-        {
-            "type": "lldb",
-            "request": "launch",
-            "name": "Launch",
-            "program": "${workspaceFolder}/vpxtool",
-            "args": [],
+            "args": [
+                // "user_arg1",
+                // "user_arg2"
+            ],
             "cwd": "${workspaceFolder}"
         },
         {
             "type": "lldb",
             "request": "launch",
-            "name": "Launch",
-            "program": "${workspaceFolder}/vpxtool",
-            "args": [],
-            "cwd": "${workspaceFolder}"
-        },
-        {
-            "type": "lldb",
-            "request": "launch",
-            "name": "Debug",
-            "program": "${workspaceFolder}/vpxtool",
+            "name": "Debug unit tests in executable 'example'",
+            "cargo": {
+                "args": [
+                    "test",
+                    "--no-run",
+                    "--bin=vxtool",
+                    "--package=vxtool"
+                ],
+                "filter": {
+                    "name": "vxtool",
+                    "kind": "bin"
+                }
+            },
             "args": [],
             "cwd": "${workspaceFolder}"
         }
