--- a/Cargo.toml
+++ b/Cargo.toml
@@ -42,8 +42,8 @@ regex = { version = "1.10.6", features = [] }
 vpin = { version = "0.15.6" }
 rust-ini = "0.21.1"
 edit = "0.1.5"
-ratatui = "0.23.0"
-#crossterm = "0.27.0"
+ratatui = "0.28.1"
+crossterm = "0.28.1"
 anyhow = "1.0.75"
 
 [dev-dependencies]
