Added imagesize to cargo to expedite cheching dimensions of wheel image. Normalized all wheel images to 1/3 of the screensize. added q to exit app.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -48,6 +48,7 @@ edit = "0.1.5"
 bevy = "0.14.2"
 bevy_asset = "0.14.2"
 bevy_asset_loader = "0.21.0"
+imagesize = "0.13.0"
 
 [dev-dependencies]
 pretty_assertions = "1.4.1"
