--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -21,6 +21,9 @@ jobs:
     runs-on: ${{ matrix.platform.os }}
 
     steps:
+      - name: Install bevy linux dependencies
+        run: sudo apt-get install g++ pkg-config libx11-dev libasound2-dev libudev-dev libxkbcommon-x11-0
+        if: contains(matrix.platform.os, 'ubuntu')
       - uses: actions/checkout@v4
       - uses: actions/cache@v4
         with:
