--- a/Cargo.toml
+++ b/Cargo.toml
@@ -23,7 +23,7 @@ colored = "2.1.0"
 console = "0.15.8"
 dialoguer = { version = "0.11.0", features = ["fuzzy-select"] }
 dirs = "5.0.1"
-image = { version = "0.25", features = ["jpeg", "png"] }
+image = { version = "0.25", default-features= true, features = ["jpeg", "png"] }
 git-version = "0.3.9"
 indicatif = "0.17.9"
 jojodiff = "0.1.2"
@@ -48,6 +48,8 @@ bevy = "0.15.0"
 bevy_asset = "0.15.0"
 bevy_asset_loader = "0.22.0"
 bevy_egui = "0.31.1"
+eframe =  "0.29.1" 
+egui_extras = { version = "0.29.1", features = ["image"] }
 crossbeam-channel = "0.5.13"
 
 [dev-dependencies]
