--- a/Cargo.toml
+++ b/Cargo.toml
@@ -42,6 +42,7 @@ vpin = { version = "0.16.1" }
 rust-ini = "0.21.1"
 edit = "0.1.5"
 jojodiff = "0.1.2"
+pinmame-nvram = "0.3.3"
 
 [dev-dependencies]
 pretty_assertions = "1.4.1"
