--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,4 +10,12 @@ resolver = "2"
 [profile.test]
 # level 0 is very slow for writing to compound files
 # see https://github.com/mdsteele/rust-cfb/issues/42
-#opt-level = 1
+opt-level = 1
+
+# Enable a small amount of optimization in the dev profile.
+[profile.dev]
+opt-level = 1
+
+# Enable a large amount of optimization in the dev profile for dependencies.
+[profile.dev.package."*"]
+opt-level = 3
