chore: refactor list view

--- a/vpxgui/Cargo.toml
+++ b/vpxgui/Cargo.toml
@@ -21,3 +21,6 @@ bevy_mini_fps = "0.1.0"
 crossbeam-channel = "0.5.14"
 image = { version = "0.25.5", default-features = true, features = ["jpeg", "png"] }
 is_executable = "1.0.4"
+
+[dev-dependencies]
+pretty_assertions = "1.4.1"
