--- a/vpxgui/Cargo.toml
+++ b/vpxgui/Cargo.toml
@@ -11,6 +11,7 @@ path = "src/main.rs"
 shared = { path = "../shared" }
 bevy = "0.15.1"
 bevy_asset = "0.15.1"
+bevy_dev_tools = "0.15.1"
 #bevy_asset_loader = "0.22.0"
 bevy_egui = "0.32.0"
 # Looks like iyes_perf_ui is no longer being maintained
