--- a/vpxtool_shared/Cargo.toml
+++ b/vpxtool_shared/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "shared"
+name = "vpxtool_shared"
 edition = "2021"
 
 [lib]
@@ -21,5 +21,4 @@ walkdir = "2.5.0"
 
 [dev-dependencies]
 pretty_assertions = "1.4.1"
-rand = "0.8.5"
 testdir = "0.9.3"
