--- a/.github/workflows/release-gui.yml
+++ b/.github/workflows/release-gui.yml
@@ -35,7 +35,7 @@ jobs:
       - name: Set full archive name as env variable
         shell: bash
         run: |
-          VERSION=$(if [[ $GITHUB_REF == refs/tags/* ]]; then echo ${GITHUB_REF#refs/tags/} | sed 's/\//-/g'; else echo $GITHUB_SHA; fi)
+          VERSION=$(if [[ $GITHUB_REF == refs/tags/* ]]; then echo ${GITHUB_REF#refs/tags/} | sed 's/\//-/g'; else git rev-parse --short $GITHUB_SHA; fi)
           EXTENSION="tar.gz"
           if [[ "${{ matrix.platform.os }}" == "windows-latest" ]]; then
             EXTENSION="zip"
@@ -50,6 +50,7 @@ jobs:
           else
             tar czvf $ARCHIVE_NAME $GUI_BINARY_NAME vpxtool_gui/assets
           fi
+          ls -l $ARCHIVE_NAME
       - name: Publish release artifacts
         uses: actions/upload-artifact@v4
         with:
