--- a/.github/workflows/release-gui.yml
+++ b/.github/workflows/release-gui.yml
@@ -56,6 +56,7 @@ jobs:
         with:
           name: $ARCHIVE_NAME
           path: $ARCHIVE_NAME
+          if-no-files-found: error
         if: startsWith( github.ref, 'refs/tags/v' ) == false
 #      - name: Publish GitHub release
 #        uses: softprops/action-gh-release@v2
