--- a/.github/workflows/release-gui.yml
+++ b/.github/workflows/release-gui.yml
@@ -40,16 +40,21 @@ jobs:
           if [[ "${{ matrix.platform.os }}" == "windows-latest" ]]; then
             EXTENSION="zip"
           fi
-          echo "ARCHIVE_NAME=${{ matrix.platform.name }}-${VERSION}.$EXTENSION" >> $GITHUB_ENV
+          echo "ARCHIVE_DIR=${{ matrix.platform.name }}-${VERSION}" >> $GITHUB_ENV
+          echo "ARCHIVE_NAME=${ARCHIVE_DIR}-${VERSION}.$EXTENSION" >> $GITHUB_ENV
           echo "GUI_BINARY_NAME=target/release/vpxtool-gui${{ matrix.platform.bin_ext }}" >> $GITHUB_ENV
       - name: Package as archive
         shell: bash
         run: |
+          mkdir $ARCHIVE_DIR
+          cp $GUI_BINARY_NAME $ARCHIVE_DIR
+          cp -r vpxtool_gui/assets $ARCHIVE_DIR
           if [[ "${{ matrix.platform.os }}" == "windows-latest" ]]; then
-            7z a $ARCHIVE_NAME $GUI_BINARY_NAME vpxtool_gui/assets
+            7z a $ARCHIVE_NAME $ARCHIVE_DIR
           else
-            tar czvf $ARCHIVE_NAME $GUI_BINARY_NAME vpxtool_gui/assets
+            tar czvf $ARCHIVE_NAME $ARCHIVE_DIR
           fi
+          rm -rf $ARCHIVE_DIR
       - name: Publish release artifacts
         uses: actions/upload-artifact@v4
         with:
