--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -9,13 +9,13 @@ jobs:
       matrix:
         platform:
           - os_name: Linux-x86_64
-            os: ubuntu-20.04
+            os: ubuntu-24.04
             target: x86_64-unknown-linux-musl
             bin: vpxtool
             name: vpxtool-Linux-x86_64-musl
 
           - os_name: Linux-aarch64
-            os: ubuntu-20.04
+            os: ubuntu-24.04
             target: aarch64-unknown-linux-musl
             bin: vpxtool
             name: vpxtool-Linux-aarch64-musl
@@ -87,8 +87,9 @@ jobs:
       - name: Publish release artifacts
         uses: actions/upload-artifact@v4
         with:
-          name: $ARCHIVE_NAME
-          path: $ARCHIVE_NAME
+          name: ${{ env.ARCHIVE_NAME }}
+          path: ${{ env.ARCHIVE_NAME }}
+          if-no-files-found: error
         if: startsWith( github.ref, 'refs/tags/v' ) == false
       - name: Publish GitHub release
         uses: softprops/action-gh-release@v2
