add vpxtool to vpxtool-gui archive

--- a/.github/workflows/release-gui.yml
+++ b/.github/workflows/release-gui.yml
@@ -31,7 +31,7 @@ jobs:
       - run: rustup toolchain install stable --profile minimal
       - uses: Swatinem/rust-cache@v2.7.7
       - name: Build
-        run: cargo build --package vpxtool_gui --locked --release
+        run: cargo build --locked --release
       - name: Set full archive name as env variable
         shell: bash
         run: |
@@ -43,12 +43,12 @@ jobs:
           ARCHIVE_DIR=${{ matrix.platform.name }}-${VERSION}
           echo "ARCHIVE_DIR=${ARCHIVE_DIR}" >> $GITHUB_ENV
           echo "ARCHIVE_NAME=${ARCHIVE_DIR}.${EXTENSION}" >> $GITHUB_ENV
-          echo "GUI_BINARY_NAME=target/release/vpxtool-gui${{ matrix.platform.bin_ext }}" >> $GITHUB_ENV
       - name: Package as archive
         shell: bash
         run: |
           mkdir $ARCHIVE_DIR
-          cp $GUI_BINARY_NAME $ARCHIVE_DIR
+          cp target/release/vpxtool${{ matrix.platform.bin_ext }} $ARCHIVE_DIR
+          cp target/release/vpxtool-gui${{ matrix.platform.bin_ext }} $ARCHIVE_DIR
           cp -r vpxtool_gui/assets $ARCHIVE_DIR
           if [[ "${{ matrix.platform.os }}" == "windows-latest" ]]; then
             7z a $ARCHIVE_NAME $ARCHIVE_DIR
