--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,5 +1,10 @@
 name: Release build
-on: [ push ]
+on:
+  push:
+    branches:
+      - main
+    tags:
+      - 'v*'
 permissions:
   contents: write
 jobs:
