build: attach release builds (#453)

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,55 +1,53 @@
-name: Release
-on: [ push ]
+name: Release build
+on:
+  push:
+    branches:
+      - main
+    tags:
+      - 'v*'
 permissions:
   contents: write
 jobs:
   release:
     name: Release - ${{ matrix.platform.os_name }}
-    if: startsWith( github.ref, 'refs/tags/v' ) || github.ref == 'refs/tags/test-release'
     strategy:
       matrix:
         platform:
           - os_name: Linux-x86_64
-            os: ubuntu-20.04
+            os: ubuntu-24.04
             target: x86_64-unknown-linux-musl
             bin: vpxtool
             name: vpxtool-Linux-x86_64-musl
-            cargo_command: cargo
 
           - os_name: Linux-aarch64
-            os: ubuntu-20.04
+            os: ubuntu-24.04
             target: aarch64-unknown-linux-musl
             bin: vpxtool
             name: vpxtool-Linux-aarch64-musl
-            cargo_command: cargo
 
           - os_name: Windows-aarch64
             os: windows-latest
             target: aarch64-pc-windows-msvc
             bin: vpxtool.exe
             name: vpxtool-Windows-aarch64
-            cargo_command: cargo
 
           - os_name: Windows-x86_64
             os: windows-latest
             target: x86_64-pc-windows-msvc
             bin: vpxtool.exe
             name: vpxtool-Windows-x86_64
-            cargo_command: cargo
 
           - os_name: macOS-x86_64
             os: macos-latest
             target: x86_64-apple-darwin
             bin: vpxtool
             name: vpxtool-macOS-x86_64
-            cargo_command: cargo
 
           - os_name: macOS-aarch64
             os: macos-latest
             target: aarch64-apple-darwin
             bin: vpxtool
             name: vpxtool-macOS-aarch64
-            cargo_command: cargo
 
     runs-on: ${{ matrix.platform.os }}
     steps:
@@ -62,7 +60,7 @@ jobs:
       - name: Build binary (*nix)
         shell: bash
         run: |
-          ${{ matrix.platform.cargo_command }} build --locked --release --target ${{ matrix.platform.target }}
+          cargo build  --package vpxtool_cli --locked --release --target ${{ matrix.platform.target }}
         if: ${{ !contains(matrix.platform.os, 'windows') }}
       - name: Build binary (Windows)
         # We have to use the platform's native shell. If we use bash on
@@ -70,12 +68,12 @@ jobs:
         # the platform's native paths and refuses to build.
         shell: powershell
         run: |
-          & ${{ matrix.platform.cargo_command }} build --locked --release --target ${{ matrix.platform.target }}
+          & cargo build --package vpxtool_cli --locked --release --target ${{ matrix.platform.target }}
         if: contains(matrix.platform.os, 'windows')
       - name: Set full archive name as env variable
         shell: bash
         run: |
-          VERSION=$(echo ${GITHUB_REF#refs/tags/} | sed 's/\//-/g')
+          VERSION=$(if [[ $GITHUB_REF == refs/tags/* ]]; then echo ${GITHUB_REF#refs/tags/} | sed 's/\//-/g'; else git rev-parse --short $GITHUB_SHA; fi)
           EXTENSION="tar.gz"
           if [[ "${{ matrix.platform.os }}" == "windows-latest" ]]; then
             EXTENSION="zip"
@@ -94,9 +92,10 @@ jobs:
       - name: Publish release artifacts
         uses: actions/upload-artifact@v4
         with:
-          name: $ARCHIVE_NAME
-          path: $ARCHIVE_NAME
-        if: github.ref == 'refs/tags/test-release'
+          name: ${{ env.ARCHIVE_NAME }}
+          path: ${{ env.ARCHIVE_NAME }}
+          if-no-files-found: error
+        if: startsWith( github.ref, 'refs/tags/v' ) == false
       - name: Publish GitHub release
         uses: softprops/action-gh-release@v2
         with:
