--- a/vpxtool_cli/Cargo.toml
+++ b/vpxtool_cli/Cargo.toml
@@ -34,6 +34,8 @@ vpin = { version = "0.17.3" }
 
 edit = "0.1.5"
 pinmame-nvram = "0.3.11"
+image = "0.25.5"
 
 [dev-dependencies]
 pretty_assertions = "1.4.1"
+rand = "0.9.0"
