build: rust edition 2024

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -53,10 +53,13 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v4
-      - name: Install toolchain
-        uses: dtolnay/rust-toolchain@stable
+      - name: Install minimal stable with clippy and rustfmt
+        uses: actions-rs/toolchain@v1
         with:
-          targets: ${{ matrix.platform.target }}
+          profile: minimal
+          toolchain: stable
+          components: rustfmt, clippy
+          target: ${{ matrix.platform.target }}
       - name: Build binary (*nix)
         shell: bash
         run: |
