--- a/.github/workflows/clippy.yml
+++ b/.github/workflows/clippy.yml
@@ -28,6 +28,12 @@ jobs:
             ~/.cargo/git/db/
             target/
           key: ${{ runner.os }}-cargo-${{ hashFiles('**/Cargo.lock') }}
+      - name: Install minimal stable with clippy and rustfmt
+        uses: actions-rs/toolchain@v1
+        with:
+          profile: minimal
+          toolchain: stable
+          components: rustfmt, clippy
       - name: Run clippy
         run: cargo clippy --color always --all-targets --all-features
       - name: Run fmt check
