--- a/.github/workflows/release-gui.yml
+++ b/.github/workflows/release-gui.yml
@@ -31,7 +31,12 @@ jobs:
         if: contains(matrix.platform.os, 'ubuntu')
       - name: Checkout
         uses: actions/checkout@v4
-      - run: rustup toolchain install stable --profile minimal
+      - name: Install minimal stable with clippy and rustfmt
+        uses: actions-rs/toolchain@v1
+        with:
+          profile: minimal
+          toolchain: stable
+          components: rustfmt, clippy
       - uses: Swatinem/rust-cache@v2.7.7
       - name: Build
         run: cargo build --locked --release
