--- a/vpxtool_cli/Cargo.toml
+++ b/vpxtool_cli/Cargo.toml
@@ -34,6 +34,7 @@ vpin = { version = "0.17.6" }
 edit = "0.1.5"
 pinmame-nvram = "0.3.11"
 image = "0.25.5"
+xcap = "0.4.0"
 
 [dev-dependencies]
 pretty_assertions = "1.4.1"
